API - Removing SpreadSheet Dependancy